--- a/_posts/2025-06-27-noticias.md
+++ b/_posts/2025-06-27-noticias.md
@@ -1,13 +1,12 @@
 ---
 layout: post
-title: Sample blog post to learn markdown tips
-subtitle: There's lots to learn!
+title: Noticias recientes
+subtitle: Revisa actualizaciones recientes Macrodata
 gh-repo: daattali/beautiful-jekyll
 gh-badge: [star, fork, follow]
-tags: [test]
+tags: [noticias]
 comments: true
 mathjax: true
-author: Bill Smith
 ---
 
 {: .box-success}
